# stry

./: .editorconfig  .gitattributes  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  TODO.md  Taskfile.yml  bom.txt  build.rs  deny.toml  importer.js  package-lock.json  package.json  schema.dal  schema.ron  stry.ron.example  tsconfig.json  webpack.config.js
client/: Cargo.toml  index.html
client/scss/: base.scss  index.scss  input.scss  label.scss  navbar.scss  progress.scss
client/src/: commands.rs  data.rs  index.html  index.scss  index.ts  index.tsx  lib.rs  state.ts  utils.ts
client/src/components/: footer.rs  footer.ts  main.ts  mod.rs  navbar.rs  navbar.ts  story.rs  story.ts  storyList.ts
client/src/data/: index.ts
client/src/models/: author.ts  chapter.ts  origin.ts  story.ts  tag.ts
client/src/pages/: chapter.ts  home.rs  home.ts  index.ts  mod.rs  storyList.ts
client/src/scss/: _variables.scss  base.scss  custom.scss  helpers.scss  input.scss  label.scss  navbar.scss  pagination.scss  panel.scss  progress.scss
common/: Cargo.toml
common/src/models/: api.rs  author.rs  chapter.rs  mod.rs  origin.rs  series.rs  story.rs  tag.rs
scraper/: Cargo.toml  import-single.json  import.json  import.json.bk  importer-old.js  package-lock.json  package.json
scraper/modules/: fanfiction.lua
scraper/src/: error.rs  list.rs  main.rs  mod.rs
scraper/src/models/: tag.rs
scraper/src/sites/: fanfiction.rs
server/: Cargo.toml  build.js  build.rs  log-format.json
server/src/: api.rs  error.rs  main.rs  nanoid.rs  typemap.rs
server/src/http/: client.rs  mod.rs  request.rs  response.rs
server/src/models/: author.rs  chapter.rs  mod.rs  origin.rs  series.rs  story.rs  tag.rs
server/src/server/: mod.rs  request.rs  response.rs  router.rs  tree.rs
stry/: Cargo.toml
stry-backend/: Cargo.toml
stry-backend-postgres/: Cargo.toml
stry-backend-postgres/src/: author.rs  chapter.rs  character.rs  lib.rs  origin.rs  pairing.rs  story.rs  tag.rs  utils.rs  warning.rs  worker.rs
stry-backend-postgres/src/author/: get-item.sql  mod.rs  stories-count.sql
stry-backend-sqlite/: Cargo.toml  build.rs  schema.db
stry-backend-sqlite/src/: author.rs  auto.sql  chapter.rs  character.rs  lib.rs  origin.rs  pairing.rs  story.rs  sync.rs  tag.rs  utils.rs  warning.rs
stry-backend-sqlite/src/author/: all-count.sql  all-items.sql  get-item.sql  mod.rs  stories-count.sql  stories-items.sql  test.rs
stry-backend-sqlite/src/chapter/: get-item.sql  mod.rs
stry-backend-sqlite/src/character/: all-count.sql  all-items.sql  get-item.sql  mod.rs  stories-count.sql  stories-items.sql  test.rs
stry-backend-sqlite/src/origin/: all-count.sql  get-item.sql  mod.rs  stories-count.sql  stories-items.sql  test.rs
stry-backend-sqlite/src/pairing/: all-count.sql  all-items.sql  mod.rs
stry-backend-sqlite/src/story/: get-pairing-character.sql  get-story-pairing.sql  mod.rs
stry-backend-sqlite/src/tag/: all-count.sql  get-item.sql  mod.rs  stories-count.sql  test.rs
stry-backend-sqlite/src/warning/: all-count.sql  all-items.sql  get-item.sql  mod.rs  stories-count.sql  stories-items.sql  test.rs
stry-backend-sqlite/src/worker/: mod.rs
stry-backend-sqlite/tests/: test-data.sql  warning.rs
stry-backend/src/: lib.rs  spec.rs  test_helpers.rs
stry-client-desktop/: Cargo.toml
stry-common/: Cargo.toml  build.rs  schema.dal  schema.ron  search.pest
stry-common/src/: backend.rs  config.rs  lib.rs  search.rs  test_helpers.rs  utils.rs  worker.rs
stry-common/src/backend/: mod.rs  nanoid.rs  spec.rs
stry-common/src/models/: author.rs  chapter.rs  character.rs  generated.rs  mod.rs  notification.rs  origin.rs  pairing.rs  series.rs  site.rs  story.rs  sync.rs  tag.rs  warning.rs  worker.rs
stry-config/: Cargo.toml
stry-config/src/: lib.rs
stry-database-tools/: Cargo.toml
stry-database-tools/src/: main.rs
stry-dataloader/: Cargo.toml
stry-dataloader/src/: lib.rs
stry-downloader/: Cargo.toml
stry-downloader/src/: downloader.rs  lib.rs  task.rs  worker.rs
stry-frontend/: Cargo.toml
stry-frontend-api/: Cargo.toml  schema.graphql
stry-frontend-api/src/: lib.rs  scalar.rs  support.rs
stry-frontend-api/src/controllers/: mod.rs
stry-frontend-api/src/filters/: mod.rs
stry-frontend-api/src/handlers/: mod.rs  mutation.rs  query.rs  subscription.rs
stry-frontend-common/: Cargo.toml
stry-frontend-common/src/: lib.rs
stry-frontend-user/: Cargo.toml  bom.txt
stry-frontend-user/assets/css/: stry.easymde.css
stry-frontend-user/assets/js/: stry.js
stry-frontend-user/localization/en-US/: main.ftl
stry-frontend-user/src/: lib.rs  pagination.rs  utils.rs
stry-frontend-user/src/controllers/: assets.rs  dashboard.rs  edit.rs  explore.rs  item.rs  mod.rs  search.rs  story.rs
stry-frontend-user/src/filters/: assets.rs  dashboard.rs  mod.rs  story.rs
stry-frontend-user/src/handlers/: dashboard.rs  explore.rs  mod.rs  search.rs  story.rs
stry-frontend-user/src/models/: mod.rs
stry-frontend-user/src/pages/: dashboard.rs  edit.rs  explore.rs  mod.rs  story.rs
stry-frontend-user/templates/: base-dashboard.html  base-standard.html  base.html  dashboard.html  error.html  explore.html  macros.html  search.html  story_list.html
stry-frontend/src/: lib.rs  logging.rs
stry-macros/: Cargo.toml
stry-macros/src/: boxed.rs  lib.rs  warp.rs
stry-macros/tests/: compile.rs
stry-migrate/: Cargo.toml  dal.pest
stry-migrate-common/: Cargo.toml  dal.pest
stry-migrate-common/src/: dal.rs  ddl.rs  lib.rs  models.rs
stry-migrate/src/: dal.rs  lib.rs  main.rs
stry-models/: Cargo.toml  build.rs
stry-models/src/: api.rs  author.rs  character.rs  generated.rs  origin.rs  pairing.rs  story.rs  tag.rs  warning.rs  worker.rs
stry-worker/: Cargo.toml
stry-worker-scraper/: Cargo.toml
stry-worker-scraper/src/: lib.rs  models.rs  task.rs  utils.rs
stry-worker/src/: lib.rs
stry/src/: blocking.rs  config.rs  layer.rs  lib.rs  main.rs  scraper.rs  server.rs  setup.rs
stry/src/commands/: serve.rs  (+1 more)
stry/templates/: dashboard.html  story_list.html
(+339 files in other folders)
