[workspace]
members = [
    "stry",
    "stry-backend",
    "stry-backend-postgres",
    "stry-backend-sqlite",
    "stry-common",
    "stry-frontend",
    "stry-frontend-api",
    "stry-frontend-user",
    "stry-worker",
    "stry-worker-scraper",
]

[profile.release]
codegen-units = 1
incremental = false
lto = true
opt-level = "z"
panic = "abort"
