[workspace]
members = [
    "stry",
    "stry-backend",
    "stry-backend-postgres",
    "stry-backend-sqlite",
    "stry-common",
    "stry-dataloader",
    "stry-frontend",
    "stry-frontend-api",
    "stry-frontend-user",
    "stry-macros",
    "stry-worker",
    "stry-worker-scraper",
]

[patch.crates-io]
tracing-attributes = { git = 'https://github.com/Txuritan/tracing', branch = "ta11p" }
