[workspace]
members = [
    "stry",
    "stry-backend",
    "stry-backend-postgres",
    "stry-backend-sqlite",
    "stry-common",
    "stry-config",
    "stry-database-tools",
    "stry-dataloader",
    "stry-evermore",
    "stry-frontend",
    "stry-frontend-api",
    "stry-frontend-user",
    "stry-generated-version",
    "stry-macros",
    "stry-models",
    "stry-quarry",
    "stry-remark",
    "stry-scraper",
    "stry-search",
    "stry-worker",
    "stry-worker-scraper",
    "xtask",
]

[patch.crates-io]
tracing-attributes = { git = 'https://github.com/Txuritan/tracing', branch = "ta11p" }
