[package]
name = "common"
version = "0.1.0"
authors = ["Txuritan <txuritan@protonmail.com>"]
edition = "2018"

workspace = ".."

[features]
wasm = ["chrono/wasmbind"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde"] }
rusqlite = { version = "0.20", features = ["bundled", "chrono"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
