[package]
name = "stry-scraper"
version = "0.1.0"
authors = ["Txuritan <txuritan@protonmail.com>"]
edition = "2018"

workspace = ".."

[dependencies]
ammonia = "=2.0.0"
comrak = { version = "0.6", default-features = false }
http = "0.1"
isahc = "0.6"
scraper = { version = "0.10", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
r2d2 = { git = "https://github.com/sfackler/r2d2", rev = "3b10dda1ed31091a363a23279cff90cf56063bb9" }
r2d2_sqlite = "0.12"
rand = "0.6"
rusqlite = { version = "0.20", features = ["bundled", "chrono"] }
chrono = "0.4"
lazy_static = "1.3"
log = { version = "0.4", features = ["std"] }
simple_logger = "1.3"
rlua = "0.16"
