[package]
name = "stry"
version = "2.1.0"
authors = ["Txuritan"]
edition = "2018"

workspace = ".."

[dependencies]
ascii = "0.9"
bcrypt = "0.4"
chrono = "0.4"
chunked_transfer = "1.0"
itertools = "0.8"
lazy_static = "1.3"
log = { version = "0.4", features = ["std"] }
r2d2 = { git = "https://github.com/sfackler/r2d2", rev = "3b10dda1ed31091a363a23279cff90cf56063bb9" }
r2d2_sqlite = "0.12"
rand = "0.6"
rusqlite = { version = "0.20", features = ["bundled", "chrono"] }
unsafe-any = "0.4"
json = "0.11"
cfg-if = "0.1.9"
