[package]
name = "stry"
version = "2.1.0"
authors = ["Txuritan"]
edition = "2018"

build = "build.rs"

workspace = ".."

[dependencies]
common = { path = "../common", features = ["rusqlite"] }

bcrypt = "0.5"
chrono = "0.4"
itertools = "0.8"
lazy_static = "1.3"
log = { version = "0.4", features = ["std"] }
r2d2 = { git = "https://github.com/sfackler/r2d2", rev = "3b10dda1ed31091a363a23279cff90cf56063bb9" }
r2d2_sqlite = "0.12"
rand = "0.7"
rusqlite = { version = "0.20", features = ["bundled", "chrono"] }
rust-embed = { version = "5.1", features = ["interpolate-folder-path"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny-http = { path = "../tiny-http" }
unsafe-any = "0.4"

[build-dependencies]
scripts = { path = "../scripts" }
