[package]
name = "stry-backend-postgres"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT OR Apache-2.0"

build = "build.rs"

workspace = ".."

[dependencies]
stry-common = { path = "../stry-common", features = [ "types-postgres" ] }

# Core
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
tracing = "0.1"

# Database
chrono = { version = "0.4", default-features = false, features = [ "serde" ] }
bb8 = "0.4"
bb8-postgres = "0.4"
tokio-postgres = { version = "0.5", features = [ "with-chrono-0_4" ] }
