[package]
name = "stry-backend-postgres"
version = "0.1.0"
authors = ["Txuritan <txuritan@protonmail.com>"]
edition = "2018"

workspace = ".."

[dependencies]
stry-common = { path = "../stry-common", features = [ "postgres" ] }

anyhow = "1.0"
async-trait = "0.1"
bb8 = "0.4"
bb8-postgres = "0.4"
chrono = { version = "0.4", default-features = false, features = [ "serde" ] }
futures = "0.3"
postgres-types = { version = "0.1", features = [ "derive" ] }
rewryte = { git = "https://gitlab.com/Txuritan/rewryte", features = [ "postgres", "serde" ] }
sql-ast = "0.7"
tokio-postgres = { version = "0.5", features = [ "with-chrono-0_4" ] }
tracing = "0.1"
tracing-futures = "0.2"
