[package]
name = "stry-backend-sqlite"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[features]
bundled = [ "rusqlite/bundled" ]

[dependencies]
# Core
stry-common = { path = "../stry-common" }
stry-config = { path = "../stry-config" }
stry-dataloader = { path = "../stry-dataloader" }
stry-macros = { path = "../stry-macros" }
stry-models = { path = "../stry-models", features = [ "sqlite" ] }
stry-search = { path = "../stry-search" }

# Crate
anyhow = "1.0"
brotli = "3.3"
chrono = { version = "0.4", default-features = false, features = [ "serde" ] }
r2d2 = "0.8"
rewryte = { git = "https://gitlab.com/Txuritan/rewryte", default-features = false, features = [ "sqlite" ] }
rusqlite = { version = "0.24", features = [ "chrono", "functions" ] }
tokio = { version = "0.2", features = [ "blocking", "sync" ] }
tracing = "0.1"
tracing-futures = "0.2"
