[package]
name = "stry-backend"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[dependencies]
# Core
stry-backend-postgres = { path = "../stry-backend-postgres" }
stry-backend-sqlite = { path = "../stry-backend-sqlite" }
stry-common = { path = "../stry-common" }

# Crate
anyhow = "1.0"
async-trait = "0.1"
fenn = { git = "https://gitlab.com/Txuritan/fenn" }
tracing = "0.1"
tracing-futures = "0.2"
