[package]
name = "stry-backend"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[features]
default = [ "postgres", "sqlite" ]
postgres = [ "stry-backend-postgres" ]
sqlite = [ "stry-backend-sqlite" ]

[dependencies]
# Core
stry-backend-postgres = { path = "../stry-backend-postgres", optional = true }
stry-backend-sqlite = { path = "../stry-backend-sqlite", optional = true }
stry-common = { path = "../stry-common" }

# Crate
anyhow = "1.0"
async-trait = "0.1"
fenn = { git = "https://gitlab.com/Txuritan/fenn" }
tracing = "0.1"
tracing-futures = "0.2"
