[package]
name = "stry-client-desktop"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT OR Apache-2.0"

workspace = ".."

[dependencies]
clipboard = "0.5"
glium = { version = "0.27", default-features = false }
imgui = "0.4"
imgui-glium-renderer = "0.4"
imgui-winit-support = "0.4"
