[package]
name = "stry-common"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT OR Apache-2.0"

build = "build.rs"

workspace = ".."

[features]
nanoid = [ "rand" ]

types-postgres = [ "postgres-types" ]
types-sqlite = [ "rusqlite" ]

[dependencies]
fenn = { git = "https://gitlab.com/Txuritan/fenn.git", default-features = false }

# Core
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = [ "derive" ] }
tracing = "0.1"

# Database
chrono = { version = "0.4", default-features = false, features = [ "serde" ] }
postgres-types = { version = "0.1", features = [ "derive" ], optional = true }
rand = { version = "0.7", optional = true }
rusqlite = { version = "0.23", features = [ "bundled" ], optional = true }

# Search
pest = "2.1"
pest_derive = "2.1"
