[package]
name = "stry-common"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[features]
sources = [ "clap" ]

[dependencies]
# Crate
anyhow = "1.0"
clap = { version = "2.33", default-features = false, optional = true }
futures = "0.3"
rand = { version = "0.7" }
ron = "0.6"
serde = { version = "1.0", features = [ "derive" ] }
tracing = "0.1"
tracing-futures = "0.2"
