[package]
name = "stry-config"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[features]
sources = [ "clap" ]

[dependencies]
# Crate
anyhow = "1.0"
clap = { version = "2.33", default-features = false, optional = true }
ron = "0.6"
serde = "1.0"
thiserror = "1.0"
