[package]
name = "stry-downloader"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT OR Apache-2.0"

workspace = ".."

[dependencies]
fenn = { git = "https://gitlab.com/Txuritan/fenn.git" }

stry-common = { path = "../stry-common" }
stry-backend = { path = "../stry-backend" }

# Core
anyhow = "1.0"
tracing = "0.1"
tracing-futures = "0.2"

# Crate
curl = { version = "0.4", features = [ "static-curl", "static-ssl" ] }
futures = "0.3"
openssl = { version = "0.10", features = [ "vendored" ] }
pin-project = "0.4"
story-dl = { version = "0.5", default-features = false }
tokio = { version = "0.2", default-features = false, features = [ "sync" ] }
