[package]
name = "stry-frontend-api"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT OR Apache-2.0"

workspace = ".."

[dependencies]
stry-common = { path = "../stry-common" }
stry-backend = { path = "../stry-backend" }
stry-frontend-common = { path = "../stry-frontend-common" }

# Core
anyhow = "1.0"
tracing = "0.1"

# Crate
bytes = "0.5"
futures-util = "0.3"
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "7365b0fdd8f1d396f679b0d73b009ffecb2e7f53" }
serde_json = "1.0"
tokio = { version = "0.2", features = [ "blocking", "rt-core" ] }
warp = { version = "0.2", default-features = false }
