[package]
name = "stry-frontend-api"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT OR Apache-2.0"

workspace = ".."

[dependencies]
fenn = { git = "https://gitlab.com/Txuritan/fenn.git" }

stry-common = { path = "../stry-common" }
stry-backend = { path = "../stry-backend" }
stry-frontend-common = { path = "../stry-frontend-common" }

# Core
anyhow = "1.0"
tracing = "0.1"

# Crate
bytes = "0.5"
futures-util = "0.3"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "0.2", features = [ "blocking", "rt-core" ] }
warp = { version = "0.2", default-features = false }

[dependencies.juniper]
git = "https://github.com/graphql-rust/juniper"
rev = "f19d498254d3e5d2a008c483943facaf3ddcc4fe"
default-features = false
features = [ "chrono" ]
