[package]
name = "stry-frontend-api"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[dependencies]
stry-backend = { path = "../stry-backend" }
stry-common = { path = "../stry-common" }

anyhow = "1.0"
bytes = "0.5"
dataloader = { version = "0.12", default-features = false, features = ["runtime-tokio"] }
futures = "0.3"
juniper = { git = "https://github.com/graphql-rust/juniper", rev = "f19d498254d3e5d2a008c483943facaf3ddcc4fe", default-features = false, features = [ "chrono" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
tokio = { version = "0.2", features = [ "blocking", "sync" ] }
tracing = "0.1"
tracing-futures = "0.2"
warp = { version = "0.2", default-features = false }
