[package]
name = "stry-frontend-common"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT OR Apache-2.0"

workspace = ".."

[dependencies]
stry-backend = { path = "../stry-backend" }

# Core
anyhow = "1.0"
tracing = "0.1"

# Crate
warp = { version = "0.2", default-features = false }
