[package]
name = "stry-frontend-user"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT OR Apache-2.0"

workspace = ".."

[dependencies]
fenn = { git = "https://gitlab.com/Txuritan/fenn.git" }

stry-common = { path = "../stry-common" }
stry-backend = { path = "../stry-backend" }
stry-frontend-common = { path = "../stry-frontend-common" }

# Core
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

# Crate
akibisuto-stylus = "0.1"
askama = { version = "0.10", default-features = false }
resource = "0.5"
serde_urlencoded = "0.6"
tokio = { version = "0.2", default-features = false, features = [ "blocking" ] }
warp = { version = "0.2", default-features = false }
