[package]
name = "stry-frontend-user"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[dependencies]
# Core
stry-backend = { path = "../stry-backend" }
stry-common = { path = "../stry-common" }
stry-generated-version = { path = "../stry-generated-version" }
stry-models = { path = "../stry-models" }

# Crate
akibisuto-stylus = { git = "https://gitlab.com/akibisuto/stylus" }
anyhow = "1.0"
askama = { version = "0.10", default-features = false }
chrono = { version = "0.4", default-features = false }
pulldown-cmark  = { version = "0.8", default-features = false }
resource = "0.5"
serde = { version = "1.0", features = [ "derive" ] }
serde_urlencoded = "0.6"
tracing = "0.1"
tracing-futures = "0.2"
warp = { version = "0.2", default-features = false }
warp-macros = { git = "https://gitlab.com/Txuritan/warp-macros" }
