[package]
name = "stry-frontend"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT OR Apache-2.0"

workspace = ".."

[dependencies]
stry-common = { path = "../stry-common" }
stry-backend = { path = "../stry-backend" }
stry-frontend-api = { path = "../stry-frontend-api" }
stry-frontend-user = { path = "../stry-frontend-user" }

# Core
anyhow = "1.0"
tracing = "0.1"
tokio = { version = "0.2", default-features = false, features = [ "sync" ] }

# Crate
akibisuto-stylus = "0.1"
warp = { version = "0.2", default-features = false }
