[package]
name = "stry-migrate"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT OR Apache-2.0"

workspace = ".."

[dependencies]
stry-common = { path = "../stry-common", features = [ "nanoid" ] }
stry-migrate-common = { path = "../stry-migrate-common" }

# Core
anyhow = "1.0"
clap = "2.33"
ron = "0.6"
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.2"
