[package]
name = "stry-worker-scraper"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[features]
curl-bundled = [ "curl/static-curl", "isahc/static-curl" ]
openssl-bundled = [ "curl/static-ssl", "openssl/vendored" ]

[dependencies]
# Core
stry-backend = { path = "../stry-backend" }
stry-common = { path = "../stry-common" }
stry-evermore = { path = "../stry-evermore" }
stry-models = { path = "../stry-models" }
stry-remark = { path = "../stry-remark" }
stry-scraper = { path = "../stry-scraper" }

# Crate
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = [ "serde" ] }
curl = "0.4"
fenn = { git = "https://gitlab.com/Txuritan/fenn" }
isahc = { version = "0.9", features = [ "cookies" ] }
lazy_static = "1.4"
openssl = "0.10"
rand = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
tokio = { version = "0.2", features = [ "blocking", "sync" ] }
tracing = "0.1"
tracing-futures = "0.2"
