[package]
name = "stry-worker"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[dependencies]
stry-backend = { path = "../stry-backend" }
stry-common = { path = "../stry-common" }
stry-worker-scraper = { path = "../stry-worker-scraper" }

tokio = { version = "0.2", features = [ "sync" ] }
