[package]
name = "stry-worker"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT"

workspace = ".."

[features]
curl-bundled = [ "stry-worker-scraper/curl-bundled" ]
openssl-bundled = [ "stry-worker-scraper/openssl-bundled" ]

[dependencies]
# Core
stry-backend = { path = "../stry-backend" }
stry-common = { path = "../stry-common" }
stry-config = { path = "../stry-config" }
stry-evermore = { path = "../stry-evermore" }
stry-worker-scraper = { path = "../stry-worker-scraper" }

# Crate
tokio = { version = "0.2", features = [ "sync" ] }
