[package]
name = "stry"
version = "2.3.0"
authors = [ "Txuritan <txuritan@protonmail.com>" ]
edition = "2018"

license = "MIT OR Apache-2.0"

workspace = ".."

[dependencies]
fenn = { git = "https://gitlab.com/Txuritan/fenn.git", default-features = false }

stry-common = { path = "../stry-common" }
stry-backend = { path = "../stry-backend" }
stry-downloader = { path = "../stry-downloader" }
stry-frontend = { path = "../stry-frontend" }

# Core
anyhow = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tracing = "0.1"
tracing-appender = "0.1"
tracing-log = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"

# Crate
ctrlc = "3.1"
ron = "0.6"
tokio = { version = "0.2", features = [ "rt-threaded", "sync" ] }
